kubernetes/skywalker/application/authentik/authentik.virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: authentik

spec:
  gateways:
    - cluster/feldman-tech
  hosts:
    - authentik.feldman.tech
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authentik-server
            port:
              number: 80
